# polycalculato_rs

./: .gitignore  Cargo.toml  build.rs  naval_data.yaml  unit_data.yaml
benches/: bench_combat.rs  bench_optim.rs
src/: combat.rs  lib.rs  main.rs  utils.rs
src/unit/: generated.rs  mod.rs
