[package]
name = "polycalculato-rs"
version = "0.1.0"
edition = "2024"

[lib]
bench = false

[profile.release]
debug = true

[[bin]]
name = "polycalculato_rs"
path = "src/main.rs"
bench = false

[dependencies]
bitflags = "2.9.0"
itertools = "0.14.0"
strum = { version = "0.27.1", features = ["derive"] }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench_combat"
harness = false

[[bench]]
name = "bench_optim"
harness = false
